REGRESSION (r55039): Animation starts from near end when loaded over slow network <http://webkit.org/b/35222> / <rdar://problem/7673523>

Rubber-stamped by Sam Weinig and Maciej Stachowiak.

Roll out r55039 (related to <http://webkit.org/b/35115>) as it causes animated GIFs
to skip intermediate frames when loading over a slower network.

* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::startAnimation):

Canonical link: https://commits.webkit.org/46379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55076 268f45cc-cd09-0410-ab3c-d52691b4dbfc